# test-tox-gh-uv

./: pyproject.toml
.github/workflows/: test-and-tag.yml
src/test_tox_gh_uv/: __init__.py
